<resources>
    <string name="app_name">Dictionary</string>
    <string name="button">Button</string>
    <string name="edittext">Name</string>
    <string name="isminiz">isminiz</string>
    <string name="switch2">Switch</string>
    <string name="et"> </string>
    <string name="btn2">ileri</string>
    <string name="textview">TextView</string>
    <string name="adiniz">Adınız</string>
    <string name="search7">Button</string>
    <string name="textview2">TextView</string>
    <string name="sayfa6">sayfa6</string>
    <string name="kelime_yaziniz">kelime yazınız</string>
    <string name="basla">Başla</string>
    <string name="about">Hakkında</string>
    <string name="geri5">Geri</string>
    <string name="ileri6">İleri</string>
    <string name="kaydet1">Kaydet</string>
    <string name="kaydigoster">Kaydı Göster</string>
    <string name="not">Not:</string>
    <string name="dosyaadi">Dosya Adı</string>
    <string name="notkaydi">Nam</string>
    <string name="notadiyaz">...</string>
    <string name="bilgilendirme">! Bilgilendirme: Not kaydı dosya adı ile birlikte yapılmaktadır bunu dikkate alarak notlarınızı kaydediniz.</string>
    <string name="dosyaadii">Dosya Adı:</string>
    <string name="kaydet">Kaydet</string>
    <string name="kaydigetir">Kaydı Getir</string>
    <string name="notgirisi">Notunuzu giriniz...</string>
    <string name="ileri">İleri</string>
    <string name="geri8">Geri</string>
    <string name="not1">Bu Uygulamada 3641 kelime bulunmaktadır. Uygulama içerisindeki not defteri ile öğrendiğiniz kelimeleri veya notlarınızı kaydedebilirsiniz.</string>
    <string name="sozlukimage">TODO</string>
    <string name="anasayfa">Ana Sayfa</string>
    <string name="puanver">Puan Ver</string>
    <string name="copyright">copyright © 2020 tüm hakları saklıdır.</string>
    <string name="dikkat">Bu Uygulama Kotlin dilinde yazılmıştır. Desteklenen Minimum Android Sürümü: Oreo (8.0)</string>
    <string name="iletisim">İletişim: Aisevery@gmail.com</string>
    <string name="developer">Develepor by Bilal Mercan</string>
    <string name="ara">Ara</string>
    <string name="searchword">aranılan kelime...</string>
    <string name="ileri1">İleri</string>
    <string name="geri2">Geri</string>
    <string name="tren">Türkçe - İngilizce</string>
    <string name="search">Search</string>
    <string name="kelimearama">searched word...</string>
    <string name="geri3">Geri</string>
    <string name="entr">English - Turkish</string>
    <string name="en_tr">en-tr</string>
    <string name="tr_en">tr-en</string>
    <string name="geri">Geri</string>
    <string name="ksm">1- Taraflar ve Konu
Bu Mobil Uygulama Kullanım Koşulları (SÖZLEŞME"), A Corporation A.Ş.
("İŞLETMECİ") ile KULLANICI arasında (bu SÖZLEŞME'de KULLANICI ifadesi SİZ'i işaret etmektedir.)
elektronik ortamda düzenlenmiş olup, KULLANICI tarafından İŞLETMECİ'nin e-dergi ("e-dergi")
uygulamasının KULLANICI'nın e-dergi üyesi olması, herhangi bir cep telefonu numarası ve giriş şifresine
sahip olması şartlarıyla üyelik satınalması ve kullanımı konusunda TARAFLAR'ın hak ve
yükümlülüklerinin düzenlenmesine yöneliktir. (İŞLETMECİ tarafından, tamamen İŞLETMECİ'nin
kararıyla, zaman zaman web sitesinde yayımlanabilecek tüm güncelleştirmeler bu SÖZLEŞME'ye
dahildir.) SÖZLEŞME'de İŞLETMECİ ve KULLANICI ayrı ayrı “TARAF” birlikte "TARAFLAR" olarak
adlandırılmışlardır.
</string>
    <string name="sozlesme">Sözleşmeyi Okudum kabul Ediyorum.</string>
</resources>
