<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/midnight"
    tools:context=".Main7Activity">

    <Button
        android:id="@+id/button4"
        android:layout_width="102dp"
        android:layout_height="47dp"

        android:layout_marginStart="8dp"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/btndesign2"
        android:drawableStart="@drawable/ic_search_black_24dp"
        android:onClick="ara"
        android:text="@string/search"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/def"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/word"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/word"
        android:layout_width="227dp"
        android:layout_height="47dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="81dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="472dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/kelimearama"
        android:inputType="textPersonName"
        android:textColor="#F3F1F1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/def"
        android:layout_width="0dp"
        android:layout_height="236dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="192dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/word" />

    <Button
        android:id="@+id/sayfa6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="280dp"
        android:layout_marginBottom="92dp"
        android:background="@drawable/btndesign"
        android:onClick="sayfa"
        android:text="@string/geri3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/def" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="186dp"
        android:layout_height="64dp"
        android:layout_marginStart="109dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="109dp"
        android:text="@string/entr"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>